--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
 #letter {
   display: none;
 }
+
+.paper {
+  background-image: url("../img/paper.jpg");
+  border-style: solid;
+  border-width: 2px;
+  display: none;
+
+  /*background-color: red;*/
+}
